app-code/adguard/adguard-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-phantom
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-phantom
  template:
    metadata:
      labels:
        app: adguard-phantom
    spec:
      nodeSelector:
        kubernetes.io/hostname: phantom
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: adguard-data
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-phantom-pvc
