app-code/adguard/adguard-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguardhome-sync
  template:
    metadata:
      labels:
        app: adguardhome-sync
    spec:
      containers:
        - name: sync
          image: ghcr.io/bakito/adguardhome-sync:latest
