app-code/adguard/adguard-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: networking
spec:
  selector:
    app: adguard
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
